--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -8,6 +8,7 @@
     <!--[if IE]>
     <link rel="stylesheet" type="text/css" href="desktop.css" media="all" />
     <![endif]-->
+    <script src="android.js" type="text/javascript" /></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <title>No network connection</title>
   </head>
@@ -15,7 +16,7 @@
     <div class="container">
       <p>No network found. Please retry or check your network settings.</p>
       <span>
-        <a href="#" class="myButton">Retry</a>
+        <a onclick="reloadAndroidPage();" href="#" class="myButton">Retry</a>
       </span>
     </div>
   </body>
