--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,21 +1,118 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css"
-          href="android.css" media="only screen and (max-width: 600px)" />
-    <link rel="stylesheet" type="text/css"
-          href="desktop.css" media="screen and (min-width: 601px)" />
-    <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="desktop.css" media="all" />
-    <![endif]-->
-    <script src="android.js" type="text/javascript" /></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <title>No network connection</title>
-  </head>
-  <body>
-    <div class="container">
-      <p>No network found. Please retry or check your network settings.</p>
-      <a onclick="reloadAndroidPage();" href="#" class="myButton">Retry</a>
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        
+        <title>JFT</title>
+        <style type="text/css" media="screen">@import "themes/css/jqtouch.min.css";</style>
+        <script src="jqt/zepto.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="jqt/jqt.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" charset="utf-8">
+            var jQT = new $.jQTouch({
+                icon: 'jqtouch.png',
+                addGlossToIcon: false,
+                startupScreen: 'jqt_startup.png',
+                statusBar: 'black'
+            });
+
+            $(function(){
+                // Custom Javascript (onReady)
+                $('a[target="_blank"]').bind('click', function() {
+                    if (confirm('This link opens in a new window.')) {
+                        return true;
+                    } else {
+                        return false;
+                    }
+                });
+            });
+        </script>
+        <style type="text/css" media="screen">
+            #about {
+                padding: 100px 10px 40px;
+                text-shadow: rgba(0, 0, 0, 0.3) 0px -1px 0;
+                color: #999;
+                font-size: 13px;
+                text-align: left;
+                background: #161618;
+            }
+            #about p {
+                margin-bottom: 8px;
+            }
+            #about a {
+                color: #fff;
+                font-weight: bold;
+                text-decoration: none;
+            }
+        </style>
+    </head>
+    <body>
+      <div id="home" class="current">
+        <div class="toolbar">
+          <h1>Dashboard</h1>
+          <a class="button slideup" id="infoButton" href="#about">About</a>
+        </div>
+        <div class="scroll">
+          <ul class="rounded">
+            <li class="arrow"><a href="#steps">The Twelve Steps of NA<small class="counter">12</small></a></li>
+          </ul>
+          <h2>External links</h2>
+          <ul class="rounded">
+            <li class="forward"><a target="_blank" href="https://jftreading.wordpress.com/">Homepage</a></li>
+            <li class="forward"><a target="_blank" href="http://github.com/jftreading/just_for_today">Source code</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="about" class="selectable">
+        <p>JFT Recovery app</p><br>
+        <p>Copyright (C) 2015 <a href="https://jftreading.wordpress.com">jftreading.wordpress.com</a></p><br>
+        <p>This program is free software; you can redistribute it and/or modify
+           it under the terms of the GNU General Public License as published by
+           the Free Software Foundation; either version 2 of the License, or
+           (at your option) any later version.</p><br>
+        <p>This program is distributed in the hope that it will be useful,
+           but WITHOUT ANY WARRANTY; without even the implied warranty of
+           MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+           GNU General Public License for more details.</p><br>
+        <p>You should have received a copy of the GNU General Public License along
+           with this program; if not, write to the Free Software Foundation, Inc.,
+           51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</p>
+        <p><br><br><a href="#" class="grayButton goback">Close</a></p>
+      </div>
+      <div id="steps">
+        <div class="toolbar">
+          <h1>The Twelve Steps</h1>
+          <a class="button back" href="#">Back</a>
+        </div>
+        <div class="scroll">
+          <ul class="edgetoedge">
+            <li>1. We admitted that we were powerless over our addiction, that
+                our lives had become unmanageable.</li>
+            <li>2. We came to believe that a Power greater than ourselves
+                could restore us to sanity.</li>
+            <li>3. We made a decision to turn our will and our lives over to the
+                care of God as we understood Him.</li>
+            <li>4. We made a searching and fearless moral inventory of
+                ourselves.</li>
+            <li>5. We admitted to God, to ourselves, and to another human
+                being the exact nature of our wrongs.</li>
+            <li>6. We were entirely ready to have God remove all these defects
+                of character.</li>
+            <li>7. We humbly asked Him to remove our shortcomings.</li>
+            <li>8. We made a list of all persons we had harmed and became
+                willing to make amends to them all.</li>
+            <li>9. We made direct amends to such people wherever possible,
+                except when to do so would injure them or others.</li>
+            <li>10. We continued to take personal inventory and when we were
+                wrong promptly admitted it.</li>
+            <li>11. We sought through prayer and meditation to improve our
+                conscious contact with God as we understood Him, praying
+                only for knowledge of His will for us and the power to carry
+                that out.</li>
+            <li>12. Having had a spiritual awakening as a result of these steps,
+                we tried to carry this message to addicts, and to practice
+                these principles in all our affairs.</li>
+        </ul>
+      </div>
+      </div>
+    </body>
 </html>
