Handle geo tel mailto urls

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -57,8 +57,8 @@
           </ul>
           <h2>External links</h2>
           <ul class="rounded">
-            <li class="forward"><a target="_blank" href="https://jftreading.wordpress.com/">Homepage</a></li>
-            <li class="forward"><a target="_blank" href="http://github.com/jftreading/just_for_today">Source code</a></li>
+            <li class="forward"><a rel="external", data-ajax="false" target="_blank" href="https://jftreading.wordpress.com/">Homepage</a></li>
+            <li class="forward"><a rel="external", data-ajax="false" target="_blank" href="http://github.com/jftreading/just_for_today">Source code</a></li>
           </ul>
         </div>
       </div>
