--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -18,7 +18,7 @@
             $(function(){
                 // Custom Javascript (onReady)
                 $('a[target="_blank"]').bind('click', function() {
-                    if (confirm('This link opens in a new window.')) {
+                    if (confirm('This link requires internet connection.')) {
                         return true;
                     } else {
                         return false;
