--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -64,7 +64,7 @@
       </div>
       <div id="about" class="selectable">
         <p>JFT Recovery app</p><br>
-        <p>Copyright (C) 2015 <a href="https://jftreading.wordpress.com">jftreading.wordpress.com</a></p><br>
+        <p>Copyright (C) 2015 <a rel="external", data-ajax="false" target="_blank" href="https://jftreading.wordpress.com">jftreading.wordpress.com</a></p><br>
         <p>This program is free software; you can redistribute it and/or modify
            it under the terms of the GNU General Public License as published by
            the Free Software Foundation; either version 2 of the License, or
@@ -73,7 +73,8 @@
            but WITHOUT ANY WARRANTY; without even the implied warranty of
            MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
            GNU General Public License for more details.</p><br>
-        <p>You should have received a copy of the GNU General Public License along
+        <p>You should have received a copy of the 
+           <a rel="external", data-ajax="false" href="gpl-2.0-standalone.html">GNU General Public License</a> along
            with this program; if not, write to the Free Software Foundation, Inc.,
            51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</p>
         <p><br><br><a href="#" class="grayButton goback">Close</a></p>
