--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -52,6 +52,7 @@
           <a class="button slideup" id="infoButton" href="#about">About</a>
         </div>
         <div class="scroll">
+          <h2>Literature</h2>
           <ul class="rounded">
             <li class="arrow"><a href="#steps">The Twelve Steps of NA<small class="counter">12</small></a></li>
           </ul>
@@ -60,6 +61,9 @@
             <li class="forward"><a rel="external", data-ajax="false" target="_blank" href="https://jftreading.wordpress.com/">Homepage</a></li>
             <li class="forward"><a rel="external", data-ajax="false" target="_blank" href="http://github.com/jftreading/just_for_today">Source code</a></li>
           </ul>
+        </div>
+        <div class="info">
+          <p>JFT Recovery app Version 1.0<br>Copyright (C) 2015</p>
         </div>
       </div>
       <div id="about" class="selectable">
@@ -77,6 +81,7 @@
            <a rel="external", data-ajax="false" href="gpl-2.0-standalone.html">GNU General Public License</a> along
            with this program; if not, write to the Free Software Foundation, Inc.,
            51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</p>
+        <p><br><a href="mailto:machinehead449@gmail.com">Send Feedback</a></p>
         <p><br><br><a href="#" class="grayButton goback">Close</a></p>
       </div>
       <div id="steps">
