Add local files to links not to be overridden. Update feedback anchor

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -81,7 +81,7 @@
            <a rel="external", data-ajax="false" href="gpl-2.0-standalone.html">GNU General Public License</a> along
            with this program; if not, write to the Free Software Foundation, Inc.,
            51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.</p>
-        <p><br><a href="mailto:machinehead449@gmail.com">Send Feedback</a></p>
+        <p><br><a rel="external", data-ajax="false" href="mailto:machinehead449@gmail.com?subject=Feedback&body=Message">Send Feedback</a></p>
         <p><br><br><a href="#" class="grayButton goback">Close</a></p>
       </div>
       <div id="steps">
